Migrate to JAR and remove all Android dependencies
Signed-off-by: Ilya Malakhov <ilya.malakhv@gmail.com>